# Machine-Learning-Projects

./: .gitignore  AGENTS.md  CLAUDE.md  DATASET_SOURCES.md  DATA_ACCESS_TROUBLESHOOTING.md  DOC_INDEX.md  GENAI_BACKLOG.md  MIGRATION_PLAN.md  PROJECT_SUMMARY.md  README.md  STABILIZATION_REPORT.md  UPGRADE_REPORT.md  WORKSPACE_OVERVIEW.md  WORKSPACE_REPORT.md  _analyze_baseline.py  _audit_100.py  _audit_100_notebooks.py  _audit_da.py  _audit_deep.py  _audit_deep_out.txt  _audit_deep_out2.txt  _benchmark_datasets.py  _build_batch19.py  _build_nb11.py  _candidate_summaries.txt  _check48.txt  _check_biz.py  _check_cell15.py  _check_cell16.py  _check_data.py  _check_data_files.py  _check_fraud_nb.py  _check_nb.py  _check_out_test.py  _check_papermill_inject.py  _check_rawbytes.py  _check_scope.py  _check_status.py  _deep_audit.py  _find_targets.py  (+142 more)
Computer Vision/: README.md  WORKSPACE_OVERVIEW.md  notebook_execution_results.json  pyproject.toml
Computer Vision/Aerial Cactus Identification/: Aerial Cactus Identification.ipynb  legacy_requirements.txt  metrics.json  notebook_summary.json  project_meta.yaml
Computer Vision/Aerial Imagery Segmentation/: legacy_requirements.txt  notebook_summary.json  project_meta.yaml
Computer Vision/Age Gender Recognition/: legacy_requirements.txt  notebook_summary.json  project_meta.yaml
Computer Vision/Blink Headpose Analyzer/: README.md  notebook_summary.json  requirements.txt
Computer Vision/Brain Tumor Classification/: Brain Tumor Classification.ipynb  metrics.json
Computer Vision/Brain Tumour Detection/: legacy_requirements.txt  notebook_summary.json  project_meta.yaml
Computer Vision/Building Footprint Change Detector/: README.md  notebook_summary.json
Computer Vision/Building Footprint Segmentation/: notebook_summary.json  project_meta.yaml
Computer Vision/Business Card Reader/: notebook_summary.json
Computer Vision/Captcha Recognition/: Captcha Recognition.ipynb  README.md  captcha-recognition.ipynb  pipeline.py
Computer Vision/Car and Pedestrian Tracker/: Car and Pedestrian Tracker.ipynb  README.md  metrics.json  pipeline.py  validation.json
Computer Vision/Cartoonize The Image/: notebook_summary.json  project_meta.yaml
Computer Vision/Celebrity Face Recognition/: legacy_requirements.txt  notebook_summary.json  project_meta.yaml
Computer Vision/Cell Counting Instance Segmentation/: README.md  notebook_summary.json
Computer Vision/Cell Nuclei Segmentation/: legacy_requirements.txt  notebook_summary.json  project_meta.yaml
Computer Vision/Chest X-ray Pneumonia Detection/: Chest X-ray Pneumonia Detection.ipynb  metrics.json
Computer Vision/Conveyor Part Defect Detector/: notebook_summary.json
Computer Vision/Crop Row Weed Segmentation/: README.md  notebook_summary.json
Computer Vision/Crowd Zone Counter/: README.md  notebook_summary.json
Computer Vision/Document Layout Block Detector/: README.md  notebook_summary.json
Computer Vision/Document Type Classifier Router/: README.md  notebook_summary.json
Computer Vision/Document Word Detection/: Document Word Detection.ipynb  README.md
Computer Vision/Dominant Color Analysis/: Dominant Color Analysis.ipynb  README.md  pipeline.py
Computer Vision/Dominant Color Extraction/: Dominant color Extraction.ipynb  readme.md  requirements.txt
Computer Vision/Driver Drowsiness Monitor/: README.md  notebook_summary.json  requirements.txt
Computer Vision/Drone Ship OBB Detector/: README.md  notebook_summary.json
Computer Vision/Ecommerce Item Attribute Tagger/: README.md  notebook_summary.json  requirements.txt
Computer Vision/Emotion Recognition from Facial Expression/: legacy_requirements.txt  notebook_summary.json  project_meta.yaml
Computer Vision/Exam Sheet Parser/: notebook_summary.json
Computer Vision/Exercise Rep Counter/: README.md  notebook_summary.json  requirements.txt
Computer Vision/Face Anti Spoofing Detection/: legacy_requirements.txt  notebook_summary.json  project_meta.yaml
Computer Vision/Face Clustering Photo Organizer/: notebook_summary.json
Computer Vision/Face Detection - OpenCV/: Face Detection (OpenCV) - Computer Vision.ipynb  Face Detection - OpenCV.ipynb  README.md  pipeline.py
Computer Vision/Face Expression Identifier/: Face Expression Identifier.ipynb  face-exp-resnet.ipynb  pipeline.py
Computer Vision/Face Landmark Detection/: notebook_summary.json  project_meta.yaml
Computer Vision/Face Mask Detection/: Face Mask Detection.ipynb  README.md  face_mask_detection_pipeline.ipynb  legacy_requirements.txt  metrics.json  notebook_summary.json  notebookf9ab511482.ipynb  pipeline.py  project_meta.yaml
Computer Vision/Face Recognition Door Lock - AWS Rekognition/: Face Recognition Door Lock - AWS Rekognition.ipynb  README.md
Computer Vision/Face Verification Attendance System/: notebook_summary.json
Computer Vision/Finger Counter Pro/: README.md  notebook_summary.json  requirements.txt
Computer Vision/Fire Area Segmentation/: README.md  notebook_summary.json
Computer Vision/Fire and Smoke Detection/: notebook_summary.json  project_meta.yaml
Computer Vision/Food Freshness Grader/: README.md  notebook_summary.json
Computer Vision/Food Image Classification/: Food Image Classification.ipynb  metrics.json
Computer Vision/Food Image Recognition & Calories Estimation/: legacy_requirements.txt  notebook_summary.json  project_meta.yaml
Computer Vision/Food Object Detection/: legacy_requirements.txt  notebook_summary.json  project_meta.yaml
Computer Vision/Form OCR Checkbox Extractor/: notebook_summary.json
Computer Vision/Gaze Direction Estimator/: README.md  notebook_summary.json  requirements.txt
Computer Vision/Gesture Control Media Player/: Gesture Control Media Player.ipynb  README.md  pipeline.py
Computer Vision/Gesture Controlled Slideshow/: README.md  notebook_summary.json  (+1 more)
(+5401 files in other folders)
