[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "convert-xml-to-json"
version = "1.0.0"
description = "CLI tool to convert XML files to JSON."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = ["xml", "json", "converter", "cli"]
dependencies = [
    "typer>=0.9,<1",
    "xmltodict>=0.13,<1",
]

[project.scripts]
xml2json = "convert_xml_to_json.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/convert_xml_to_json"]

# ---------- ruff -----------------------------------------------------------
[tool.ruff]
target-version = "py311"
line-length = 99

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "SIM", "RUF"]

# ---------- pyright --------------------------------------------------------
[tool.pyright]
include = ["src"]
pythonVersion = "3.11"
typeCheckingMode = "basic"

# ---------- pytest ---------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
